fixed some glitches on mobile and made updating seamless

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   position: absolute;
   left:0px;
   width: 50%;
-  height:100%;
+  height:90%;
   background-color: red;
   align-items: center;
 }
@@ -26,7 +26,7 @@ h2
   position: absolute;
   left: 50%;
   width: 50%;
-  height:100%;
+  height:90%;
   background-color: blue;
 }
 .rightDiv:hover
@@ -35,9 +35,11 @@ h2
 }
 .score
 {
+  height: 10%;
   background-color: white;
 }
 img
 {
+  margin-top: -25%;
   width:400px;
 }
